fix overlapping button

--- a/src/assets/css/artist-ui.css
+++ b/src/assets/css/artist-ui.css
@@ -2642,7 +2642,7 @@ img {
   font-weight: 700;
   letter-spacing: -0.025rem;
   padding: 0.9rem 0;
-  width: 26.625rem;
+  width: 100%; /* */
   border-radius: 0.3125rem;
   background-color: var(--orange);
   margin: 2rem auto 1rem;
@@ -3875,9 +3875,9 @@ img {
     line-height: normal;
     letter-spacing: -0.0175rem;
     padding: 0.71rem 0;
-    width: 19.96875rem;
+    width: 100%; /* 19.96875rem */
     border-radius: 0.23438rem;
-    margin: 1rem auto 0rem 0.75rem;
+    margin: 1rem auto;
   }
   .modal-add-member .upload-img .label-img .camera-inner {
     padding: 2.5rem;
